--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,12 @@
 Changelog
 =========
 
+1.3 (unreleased)
+----------------
+- Turn thumbs background images into a sprite [marcosfromero]
+- Improve accessibility: non AJAX/JavaScript support [marcosfromero]
+- Improve i18n and added new Spanish translations [marcosfromero]
+
 1.2 (2011-05-27)
 ----------------
 - Initial i18n and Spanish translation [hvelarde]
