--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,4 +1,3 @@
-
 Changelog
 =========
 
@@ -7,6 +6,7 @@ Changelog
 - Turn thumbs background images into a sprite [marcosfromero]
 - Improve accessibility: non AJAX/JavaScript support [marcosfromero]
 - Improve i18n and added new Spanish translations [marcosfromero]
+- Improve feedback for anonymous users and after voting [marcosfromero]
 
 1.2 (2011-05-27)
 ----------------
