--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 1.4 (Unreleased)
 ----------------
+- Add support for Plone 3 [rochecompaan]
+- Enable use of the twotumbs widget outside the content div [rochecompaan]
 
 1.3 (2011-09-22)
 ----------------
