--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,7 +4,8 @@ Changelog
 
 1.5 (unreleased)
 ----------------
-- 
+- Add support for dexterity behaviors [eleddy]
+- Fix confirmation message alignment for default plone sites [eleddy]
 
 1.4 (2012-05-15)
 ----------------
