Fixed some po headers.

--- a/cioppino/twothumbs/locales/nl/LC_MESSAGES/cioppino.twothumbs.po
+++ b/cioppino/twothumbs/locales/nl/LC_MESSAGES/cioppino.twothumbs.po
@@ -9,8 +9,9 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0\n"
-"Language-Code: en\n"
-"Language-Name: English\n"
+"Language: nl\n"
+"Language-Code: nl\n"
+"Language-Name: Nederlands\n"
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: cioppino.twothumbs\n"
 "Language-code: nl\n"
