--- a/cioppino/twothumbs/locales/nl/LC_MESSAGES/plone.po
+++ b/cioppino/twothumbs/locales/nl/LC_MESSAGES/plone.po
@@ -3,7 +3,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: cioppino.twothumbs 2.1.3\n"
-"POT-Creation-Date: 2019-10-09 13:26+0000\n"
+"POT-Creation-Date: 2019-10-09 13:39+0000\n"
 "PO-Revision-Date: 2019-10-09 15:30 +0200\n"
 "Last-Translator: Maurits van Rees <m.van.rees@zestsoftware.nl>\n"
 "Language-Team: Zest Software <info@zestsoftware.nl>\n"
@@ -11,11 +11,11 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0\n"
-"Language: nl\n"
 "Language-Code: nl\n"
 "Language-Name: Nederlands\n"
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: plone\n"
+"Language: nl\n"
 "X-Is-Fallback-For: nl-be nl-nl\n"
 
 #: profiles/base/registry.xml
@@ -24,4 +24,8 @@ msgstr "Metadata"
 
 #: profiles/base/registry.xml
 msgid "Positive ratings"
+msgstr "Ik vind dit leuk"
+
+#: profiles/base/registry.xml
+msgid "positive_ratings"
 msgstr "Ik vind dit leuk"
